force scrollbar to be visible (avoid rendering glitch)

--- a/stylesheets/screen.scss
+++ b/stylesheets/screen.scss
@@ -2,6 +2,11 @@
 @import "partials/addons";
 @import "partials/fonts";
 
+// force scrollbar to be visible to avoid shifting
+html {
+  overflow-y: scroll;
+}
+
 .col, .row-col, .span0 {
   float: left;
   margin-left: $gridGutterWidth;
